# nobody_is_perfect

./: Cargo.toml  README.md
.github/workflows/: release.yaml
game_plugin/: Cargo.toml
game_plugin/src/: audio.rs  entities.rs  lib.rs  loading.rs  menu.rs  player.rs  ui.rs
game_plugin/src/loading/: paths.rs
resources/: background.aup  events.aup  icon.xcf  menu.xcf  nobody_is_perfect.xcf
resources/background_data/eff/d1f/: eff1f065.au  eff1f10f.au  eff1f134.au  eff1f148.au  eff1f19a.au  eff1f365.au  eff1f374.au  eff1f4ed.au  eff1f50c.au  eff1f6db.au  eff1f712.au  eff1f74a.au  eff1f7e4.au  eff1f868.au  eff1f8e8.au  eff1fa27.au  eff1faab.au  eff1fafd.au  eff1fb3d.au  eff1fbba.au  eff1fd5b.au  eff1ff8f.au
resources/events_data/eff/d1f/: eff1f180.au  eff1f1c1.au  eff1f290.au  eff1f43d.au  eff1f449.au  eff1f781.au  eff1fb8a.au  eff1fc0c.au  eff1fc97.au  eff1fff0.au
src/: main.rs
